css/index.css
/* fonts */
.roboto-regular {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
  }

/* misc */
body {
    width: fit-content;
    margin-left:auto;
    margin-right:auto;
    background-color: #622b86;
    /* background-image: url(/media/bg.png); */
}

p {
    margin: 0;
    color: #230a38;
    text-align: justify;
}

::selection {
    background: #e54715
}

#wrapper {
    background-color: black;
}

.logo {
    /* keep pixelly-ness */
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    image-rendering: crisp-edges;
    -ms-interpolation-mode: nearest-neighbor;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
    transition: transform .5s ease;
}

.logo:hover {
    transform: scale(1.1);
}

.welcome-title {
    color: #230a38;
    font-size: 36px;
}

.column-container {
    display: inline-grid;
    margin-left: auto;
    margin-right: auto;
}

.main-column {
    grid-column-start: 1;
    grid-column-end: 1;
    width:700px;
    display: inline-block;
    margin-right: 20px;
}

.secondary-column {
    grid-column-start: 2;
    grid-column-end: 2;
    width:230px;
    display: inline-block;
}

.outer-box {
    border-image: url(/media/frame.png) 9 fill repeat;
    border-image-slice: 15;
    border-width: 16px;
    border-style: solid;
}

.box {
    background-color:#e5d2ba;
    color:#000;
}

.space-top {
    margin-top: 5px;
}

.smaller-space-bottom {
    margin-bottom: 5px;
}

.space-bottom {
    margin-bottom: 15px;
}

.space-left {
    margin-left: 5px;
}

.space-right {
    margin-right: 5px;
}

.main-box-pfp {
    float: right;
    width: 96px;
    margin-left: 15px;
    margin-right: 8px;
    margin-top: 5px;
    border-radius: 50%;
}

@keyframes marquee-left {
    /* this should be the length of the column its in */
    from {transform: translateX( 700px )}
    to {transform: translateX( -100% )}
}

.marquee-text {
    white-space: nowrap;
    animation: marquee-left 60s linear infinite;
    color:#ef6a41;
    width:fit-content;
}

#goon {
    float: right;
    position: relative;
    bottom: 81px;
}

#bogg {
    position: absolute;
    width: 75px;
    margin-left: -63px;
    margin-top: 35px;
}

